--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1858,34 +1858,34 @@ textarea.form-control {
     margin: 5px 2px;
     border-radius: 50%;
   }
-  
+
   .icon:hover {
       opacity: 0.7;
   }
-  
+
   .fa-facebook {
     background: #3B5998;
     color: white;
   }
-  
+
   .fa-twitter {
     background: #55ACEE;
     color: white;
   }
-  
+
   .fa-google {
     background: #dd4b39;
     color: white;
   }
-  
+
   .fa-youtube {
     background: #bb0000;
     color: white;
   }
   .fa-envelope {
-    background: #bb0000;
-    color: white;
+
+    color: red;
   }
-  
+
 
 /*# sourceMappingURL=style.css.map */
